# newton

./: .buildinfo  .chysx_test.out  .coderabbit.yml  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  00_introduction.ipynb  01_articulations.ipynb  02_inverse_kinematics.ipynb  03_domain_randomization.ipynb  05_diffsim.ipynb  AGENTS.md  BENCHMARK_REPLICATE_FAST_MODES_M445.md  BENCHMARK_REPLICATE_FAST_MODES_QUADRUPED.md  BENCHMARK_REPLICATE_FAST_MODES_QUADRUPED_GLOBAL_TERRAIN.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  COSSERAT.md  MERGE_PLAN.md  MUJOCO_LOG.TXT  README.md  README.zh.md  SECURITY.md  STAGE1_COMPLETION_SUMMARY.md  UNITY_REF.md  UNITY_REF_GEMINI.md  UNITY_REF_OPUS.md  WARP.md  _diag_flip.py  activate_venv.sh  anymal_converted.xml  api.html  architecture.md  asv.conf.json  benchmark_feature_request.md  benchmark_implementation_plan.md  brev_runscript.sh  converted.xml  (+32 more)
.agent/execplans/: fpgs-private-api-matrix-free.md
.agent/review/: fpgs-private-api-pr-description-draft.md
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/scripts/: detect_api_changes.py
.github/workflows/: autorebase.yml  aws-gpu-tests.yml  aws_gpu_benchmarks.yml  aws_gpu_tests.yml  ci.yml  docs-dev.yml  docs-release.yml  merge_queue_aws_gpu.yml  minimum_deps_tests.yml  mujoco_warp_tests.yml  pr.yml  pr_api_changes.yml  pr_auto_assign_creator.yml  pr_aws_gpu_asv.yml  pr_aws_gpu_tests.yml  pr_closed.yml  pr_dependency_review.yml  (+14 more)
1.2.0/: .buildinfo  genindex.html  index.html  migration.html  py-modindex.html  search.html  searchindex.js
1.2.1/: .buildinfo  faq.html  genindex.html  index.html  migration.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.3.0/: .buildinfo  index.html  objects.inv  search.html
1.4.0/: .buildinfo  faq.html  genindex.html  index.html  migration.html  objects.inv  search.html  searchindex.js
ChysX/: .clangd  .gitignore  AI_ONBOARDING.md  CMakeLists.txt  README.md  pyproject.toml
ChysX/chysx/: __init__.py
ChysX/src/: bindings.cpp
ChysX/src/cloth/: cloth.md  cloth_buffers.h  cloth_material.h  cloth_simulator.cu  cloth_simulator.h
ChysX/src/collision/: aabb.cuh  contact_spmv.cu  contact_spmv.h  lbvh.cu  lbvh.h  mesh_topology.cu  mesh_topology.h  morton.cuh  quant_bvh.cu  quant_bvh.h  self_collision.cu  self_collision.h  static_contact.cu  static_contact.h  untangle.cu  untangle.h
ChysX/src/constraint/: bending_constraint.cu  bending_constraint.h  constraint.h  constraint_n.h  pin_constraint.cu  pin_constraint.h  self_collision_constraint.cu  self_collision_constraint.h  spring_constraint.cu  spring_constraint.h  triangle_stretch_constraint.cu  triangle_stretch_constraint.h  untangle_constraint.cu  untangle_constraint.h
ChysX/src/geometry/: triangle_mesh.h
ChysX/src/math/: common.cuh  matrix.cuh  vec.cuh
ChysX/src/memory/: cuda_array.cu  cuda_array.h  device_span.h
ChysX/src/profile/: nvtx_range.h
ChysX/src/solver/: pcg_solver.cu  pcg_solver.h
ChysX/src/sparse/: block_csr.cu  block_csr.h  block_csr_atomic.cuh
FeetFinder/: foot1.usd
api/: newton.html  newton_geometry.html  newton_ik.html  newton_selection.html  newton_sensors.html  newton_solvers.html  newton_solvers_style3d.html  newton_usd.html  newton_utils.html  newton_viewer.html
changelog.d/: README.md  changelog-fragment-workflow-3956bf60.skip
claude_context/: README.md  next-steps.md
concepts/: articulations.html  conventions.html  custom_attributes.html
docs/: api.rst  api_core.rst  api_importers.rst  api_renderers.rst  api_solvers.rst  api_utilities.rst  architecture.md  cable_joints.md  cable_joints_formulation.md  cable_joints_formulation.tex  cable_joints_slip_plan.md  conf.py  conventions.rst  development-guide.rst  generate_api.py  generate_cable_joints_figures.py  index.rst  key-concepts.rst  migration.rst  serve.py
guide/: development.html  installation.html  key-concepts.html  overview.html  tutorials.html  visualization.html
integrations/: index.html  isaac-lab.html  mujoco.html
latest/: genindex.html  migration.html  objects.inv  searchindex.js
newton/: __init__.py  _version.py  _warp_config.py  actuators.py  controllers.py  exceptions.py  geometry.py  math.py  selection.py  sensors.py  solvers.py  usd.py  utils.py  viewer.py
pbd_rods/: PositionBasedElasticRods.cpp  PositionBasedElasticRods.h
reports/: hydro_pressure_validation_report_2026-03-05.md
scripts/: bench_viewer_transparency.py  build_cable_bend_twist_web_reports.py  cenic_double_pendulum_lqr.py  cenic_step_anymal_walk.py  cenic_step_quadruped.py  changelog.py  check_asv_pins.py  check_warp_array_syntax.py  daily_sync_upstream.sh  diagnose_pcg.py  migrate_array_syntax.py  nightly_sync_report.ps1  prepare_hydro_mesh.py  profile_chysx.py  register_nightly_sync_task.ps1  research_compare.ps1  sync_upstream.ps1  tune_dish_rack.py  variable_step_double_pendulum.py
stable/: faq.html  genindex.html  migration.html  objects.inv  py-modindex.html  searchindex.js
tools/: record_example_video.py
tutorial/: 00_introduction.ipynb  01_articulations.ipynb  02_inverse_kinematics.ipynb  03_joint_control.ipynb  04_domain_randomization.ipynb  05_robot_policy.ipynb  06_diffsim.ipynb  README.md  brev_runscript.sh
tutorials/: 00_introduction.html  00_introduction.ipynb
unity_ref/: Body.cs  BodyExt.cs  DefKitDirectElasticRodSystem.cs  DefKitElasticRodSystem.cs  DefKitElasticRodTrackSlidingSystem.cs  DefKitRodsSlidingSystem.cs  Edges.cs  ElasticRod.cs  RodMesher.cs  RodParams.txt  Tetrahedrons.cs  Triangles.cs  libDefKit.so.1  libDefKit.so.1.0.0  libDefKitAdv.so.1  libDefKitAdv.so.1.0.0
unity_ref/Native/: CMakeLists.txt  Constraints.h  DefKit.cpp  DefKit.h  DirectElasticRod.cpp  DirectElasticRod.h  ElasticRod.cpp  ElasticRod.h  Utils.h
unity_ref/Native/LinearMath/: btDbvt.cpp  btDbvt.h  btDbvtAabbMM2.h  btDbvtAabbMm.h
unity_ref/Native/PositionBasedDynamics/: DirectPositionBasedSolverForStiffRodsInterface.h  PositionBasedElasticRods.cpp  PositionBasedElasticRods.h
unity_ref/Native/PositionBasedDynamics/Common/: Common.h
(+3346 files in other folders)
