[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newton"
dynamic = ["version"]
license = "Apache-2.0"
license-files = ["LICENSE.md", "newton/licenses/**/*.txt"]
authors = [{ name = "Newton Developers", email = "developers@newton-physics.org" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Environment :: GPU :: NVIDIA CUDA :: 13",
    "Topic :: Scientific/Engineering",
]
description = "A GPU-accelerated physics engine for robotics simulation"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff.lint.per-file-ignores]
"asv/benchmarks/**/*" = ["RUF012", "E402"]
"newton/examples/**/*" = ["E402", "TID253"]
# TID253 (banned module-level imports) only applies to newton/_src and newton/tests
"docs/**/*" = ["TID253"]
"asv/**/*" = ["TID253"]

[tool.ruff.lint.flake8-tidy-imports]
banned-module-level-imports = [
    "alphashape",
    "coacd",
    "fast_simplification",
    "git",
    "imgui_bundle",
    "IPython",
    "matplotlib",
    "meshio",
    "mujoco",
    "mujoco_warp",
    "networkx",
    "open3d",
    "openmesh",
    "PIL",
    "point_cloud_utils",
    "pxr",
    "pyfqmr",
    "pyglet",
    "pytetwild",
    "requests",
    "scipy",
    "torch",
    "trimesh",
    "viser",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.coverage.run]
source = ["newton"]
disable_warnings = [
    "module-not-measured",
    "module-not-imported",
    "no-data-collected",
    "couldnt-parse",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@wp",
    "@warp",
    "if 0:",
    "if __name__ == .__main__.:",
]
omit = [
    "*/newton/examples/*",
    "*/newton/tests/*",
    "*/newton/tests/thirdparty/*",
]

[tool.basedpyright]
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false
reportExplicitAny = false
reportUnannotatedClassAttribute = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportOptionalOperand = false
reportUnusedCallResult = false

[tool.typos]
files.extend-exclude = ["/examples/assets", "*.urdf", "*.usd", "*.usda", "*.mjcf", "*.js"]

[tool.typos.default.extend-words]
arange = "arange"
ba = "ba"
HAA = "HAA"
lod = "lod"
# MuJoCo Menagerie brand/product names
Pincher = "Pincher"
Robotis = "Robotis"
robotis = "robotis"
Iit = "Iit"
IIT = "IIT"
iit = "iit"
PN = "PN"
pnd = "pnd"

[tool.typos.default.extend-identifiers]
PNGs = "PNGs"
Haa = "Haa"
